fix: color contrast error by axe-core

--- a/src/.vuepress/theme/styles/_a11y.scss
+++ b/src/.vuepress/theme/styles/_a11y.scss
@@ -16,13 +16,13 @@
 
 [tabindex]:not([tabindex="-1"]), a, button, input, select, textarea {
   position: relative;
-  z-index: 2;
   outline: 2px solid transparent;
   outline-offset: 6px;
   transition: outline-offset .1s ease;
 }
 
 *:focus {
+  z-index: 2 !important;
   outline-color: var(--color);
   outline-offset: 3px;
 }
